--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-Unnamed repository; edit this file 'description' to name the repository.
+Mx3Bot, a TCL scripting IRC bot designed to work with GameSurge
